# espgotchi

./: .gitignore  CLAUDE.md  CMakeLists.txt  README_ESP32.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/tamalib/: CMakeLists.txt  hal.h  hal_types.h
main/: CMakeLists.txt  esp32_main.c
src/: config.c  config_old.c  gfx.c  job.c  main.c  rom.c  rom.h  ssd1306.c  ssd1306.h  state.c
src/mcu/esp32/: backlight.c  battery.c  board_esp32.h  display_init.c  fatfs_compat.h  fs_ll.c  gpio.c  i2c.c  i2c.h  input.c  led.c  mcu.h  mcu_types.h  speaker.c  spi.c  storage.c  system.c  time.c  u8x8_byte_esp32_hw_i2c.c  u8x8_gpio_and_delay_esp32.c  usb.c
src/mcu/inc/: board.h  fs_ll.h  gpio.h
