idf_component_register(SRCS "esp32_main.c"
                             "../src/main.c"
                             "../src/config.c"
                             "../src/gfx.c"
                             "../src/menu.c"
                             "../src/rom.c"
                             "../src/state.c"
                             "../src/ssd1306.c"
                             "../src/job.c"
                             "../src/mcu/esp32/gpio.c"
                             "../src/mcu/esp32/input.c"
                             "../src/mcu/esp32/spi.c"
                             "../src/mcu/esp32/time.c"
                             "../src/mcu/esp32/speaker.c"
                             "../src/mcu/esp32/battery.c"
                             "../src/mcu/esp32/system.c"
                             "../src/mcu/esp32/led.c"
                             "../src/mcu/esp32/backlight.c"
                             "../src/mcu/esp32/storage.c"
                             "../src/mcu/esp32/usb.c"
                             "../src/mcu/esp32/fs_ll.c"
                             "../src/mcu/esp32/display_init.c"
                    INCLUDE_DIRS "../src"
                                 "../src/mcu/inc"
                                 "../src/mcu/esp32"
                    REQUIRES spiffs nvs_flash esp_adc tamalib esp_timer
                             esp_driver_gpio esp_driver_ledc esp_driver_spi)